BAU: Remove manual setting of `Environment` dimension